style.css
body{
    font-family: sans-serif;
    user-select: none;
}

#container{
    position: absolute;
    width: 400px;
    margin-left: -200px;
    left: 50%;
    height: auto;
}

@media only screen and (max-width: 600px) {
    #container {
        width: 90%;
        margin-left: 5%;
        left: 0;
    }
  }

#title{
    width: 100%;
    text-align: center;
    font-size: 100px;
    font-weight: 800;
    color: rgb(2, 172, 132);
    margin: 10px 0px 10px 0px;
}

#scale_container{
    position: relative;
	width: 100%;
    padding-top: 100%;
    margin-bottom: 20px;
}

#grid_container{
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background-color: rgb(230,230,230);
    color: rgb(50,50,50);
    font-weight: bold;
    font-size: 22px;
    box-sizing:border-box;
    border: 3px solid rgb(230,230,230);
    border-radius: 8px;
}

.tile{
    height: 16.666666%;
    width: 16.666666%;
    background: rgb(250,250,250);
    box-sizing:border-box;
    border: 3px solid rgb(230,230,230);
    cursor: pointer;
    transition-duration: 0.15s;
    border-radius: 8px;
    float: left;
    display: flex;
    align-items: center;
    justify-content: center;
}

.tile:active{
    color: white !important;
    background-color: rgb(2, 172, 132) !important;
}

.btn{
    height: 60px;
    width: 150px;
    line-height: 60px;
    display: inline-block;
    font-size: 22px;
    font-weight: bold;
    cursor: pointer;
    text-align: center;
    border-radius: 8px;
    letter-spacing: 1px;
    transition-duration: 0.15s;
}

.btn-primary{
    background-color: rgb(0, 204, 156);
    color: white;
}

.btn-secondary{
    height: 48px;
    width: 138px;
    border: 6px solid rgb(0, 204, 156);
    color: rgb(0, 204, 156);
    line-height: 48px;
}

.btn-primary:active{
    background-color: rgb(2, 172, 132);
}

.btn-secondary:active{
    color: rgb(2, 172, 132);
    border-color: rgb(2, 172, 132);
}

#submit_button{
    float: right;
}

sub{
    color: rgba(20,20,20,0.5);
    font-size: 15px;
    font-weight: 500;
    margin-top: 15px;
    margin-left: 5px;
}

#score_row{
    text-align: center;
    margin-bottom: 20px;
}

.label{
    font-weight: bold;
    font-size: 25px;
    letter-spacing: 1px;
    height: 40px;
    line-height: 40px;
    height: 100%;
    background-color: rgb(0, 204, 156);
    display: inline-block;
    color: white;
    border-radius: 40px;
    padding-left: 15px;
    padding-right: 15px;
}

.inner_label{
    margin-right: -15px;
}

#selection_score_container{
    background-color: rgb(2, 172, 132);
    display: none;
}

#multiplier_container{
    background-color: rgb(3, 145, 111);
    display: none;
}

